# climpt

./: .gitignore  LICENSE  README.md  app.py  climpt.ini  climpt.yaml  config.py  hotkeys.py  main.py  pixi.toml  prompts.json  pyproject.toml  storage.py  utils.py
.github/workflows/: ci.yaml
gui/: edit_dialog.py  main_frame.py  prompt_card.py  settings_dialog.py  tag_panel.py
gui/styles/: __init__.py  style_manager.py
gui/styles/components/: collapse_control.qss  context_menu.qss  copied_message.qss  copied_message_label.qss  main_frame.qss  prompt_card.qss  prompt_card_content.qss  prompt_header.qss  prompts_container.qss  tag_blob.qss  tag_panel.qss
gui/styles/theme/: light.yaml
gui/utils/: toggle_switch.py
