[tool.pixi.workspace]
authors = ["Ostarkov S.N. ostarkovstepan@gmail.com"]
channels = ["https://repo.anaconda.com/pkgs/main", "https://repo.anaconda.com/pkgs/r", "conda-forge",]
platforms = ["win-64", "linux-64"]

[tool.pixi.tasks]
start = "python main.py"
build = "pyinstaller --onefile --windowed main.py"
debug = "python main.py -vv"

[tool.pixi.dependencies]
python = "3.12.*"
pyperclip = "*"
pyinstaller = "*"
pyyaml = ">=6.0.2,<7"
click = ">=8.1.8,<9"
pyside6 = ">=6.7.3,<7"

[project]
name = "climpt"
version = "0.1.0"
description = "Climpt - Clipboard Prompt Manager: Легковесное приложение для хранения и вставки текстовых промптов"
